updated json source file updated with js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kahilkubilay/colorful-github",
+  "name": "colorful-github1",
   "version": "1.0.0",
   "description": "color codes for languages on github",
   "main": "index.js",
