change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "colorful-github1",
+  "name": "colorful-github",
   "version": "1.0.0",
   "description": "color codes for languages on github",
   "main": "index.js",
